[package]
name = "math_lingo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
math_lingo_impl = { version = "0.1.0", path = "../math_lingo_impl" }
proc-macro2 = "1.0"
syn = { version = "2.0", features = ["full"] }

[lib]
proc-macro = true
